--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" placeholder="Digite seu E-mail">
             </div>
-            <div class="half-box">
+            <div class="half-box spacing">
                 <label for="name">Nome</label>
                 <input type="text" name="name" id="name" placeholder="Digite o seu nome">
             </div>
@@ -22,7 +22,7 @@
                 <label for="lastname">Sobrenome</label>
                 <input type="text" name="lastname" id="lastname" placeholder="Digite o seu sobrenome">
             </div>
-            <div class="half-box">
+            <div class="half-box spacing">
                 <label for="password">Senha</label>
                 <input type="password" name="password" id="password" placeholder="Digite a sua senha">
             </div>
